@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,59 +22,37 @@
  */
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.FilePermission;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
-import java.util.concurrent.Callable;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.FileHandler;
 import java.util.logging.Level;
 import java.util.logging.LogManager;
 import java.util.logging.LogRecord;
-import java.util.logging.LoggingPermission;
 
 /**
  * @test
  * @bug 8059767
  * @summary tests that FileHandler can accept a long limit.
  * @modules java.logging/java.util.logging:open
- * @run main/othervm FileHandlerLongLimit UNSECURE
- * @run main/othervm -Djava.security.manager=allow FileHandlerLongLimit SECURE
+ * @run main/othervm FileHandlerLongLimit
  * @author danielfuchs
  * @key randomness
  */
 public class FileHandlerLongLimit {
 
-    /**
-     * We will test handling of limit and overflow of MeteredStream.written in
-     * two configurations.
-     * UNSECURE: No security manager.
-     * SECURE: With the security manager present - and the required
-     *         permissions granted.
-     */
-    public static enum TestCase {
-        UNSECURE, SECURE;
-        public void run(Properties propertyFile) throws Exception {
-            System.out.println("Running test case: " + name());
-            Configure.setUp(this, propertyFile);
-            test(this.name() + " " + propertyFile.getProperty("test.name"), propertyFile,
-                    Long.parseLong(propertyFile.getProperty(FileHandler.class.getName()+".limit")));
-        }
+     // We will test handling of limit and overflow of MeteredStream.written
+    public static void run(Properties propertyFile) throws Exception {
+        setUp(propertyFile);
+        test(propertyFile.getProperty("test.name"), propertyFile,
+                Long.parseLong(propertyFile.getProperty(FileHandler.class.getName()+".limit")));
     }
 
 
@@ -144,99 +122,40 @@ public class FileHandlerLongLimit {
 
     public static void main(String... args) throws Exception {
 
-
-        if (args == null || args.length == 0) {
-            args = new String[] {
-                TestCase.UNSECURE.name(),
-                TestCase.SECURE.name(),
-            };
-        }
-
         try {
-            for (String testName : args) {
-                for (Properties propertyFile : properties) {
-                    TestCase test = TestCase.valueOf(testName);
-                    test.run(propertyFile);
-                }
+            for (Properties propertyFile : properties) {
+                run(propertyFile);
             }
         } finally {
             if (userDirWritable) {
-                Configure.doPrivileged(() -> {
-                    // cleanup - delete files that have been created
-                    try {
-                        Files.list(Paths.get(userDir))
-                            .filter((f) -> f.toString().contains(PREFIX))
-                            .forEach((f) -> {
-                                try {
-                                    System.out.println("deleting " + f);
-                                    Files.delete(f);
-                                } catch(Throwable t) {
-                                    System.err.println("Failed to delete " + f + ": " + t);
-                                }
-                            });
-                    } catch(Throwable t) {
-                        System.err.println("Cleanup failed to list files: " + t);
-                        t.printStackTrace();
-                    }
-                });
+                // cleanup - delete files that have been created
+                try {
+                    Files.list(Paths.get(userDir))
+                        .filter((f) -> f.toString().contains(PREFIX))
+                        .forEach((f) -> {
+                            try {
+                                System.out.println("deleting " + f);
+                                Files.delete(f);
+                            } catch(Throwable t) {
+                                System.err.println("Failed to delete " + f + ": " + t);
+                            }
+                        });
+                } catch(Throwable t) {
+                    System.err.println("Cleanup failed to list files: " + t);
+                    t.printStackTrace();
+                }
             }
         }
     }
 
-    static class Configure {
-        static Policy policy = null;
-        static final AtomicBoolean allowAll = new AtomicBoolean(false);
-        static void setUp(TestCase test, Properties propertyFile) {
-            switch (test) {
-                case SECURE:
-                    if (policy == null && System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    } else if (policy == null) {
-                        policy = new SimplePolicy(TestCase.SECURE, allowAll);
-                        Policy.setPolicy(policy);
-                        System.setSecurityManager(new SecurityManager());
-                    }
-                    if (System.getSecurityManager() == null) {
-                        throw new IllegalStateException("No SecurityManager.");
-                    }
-                    if (policy == null) {
-                        throw new IllegalStateException("policy not configured");
-                    }
-                    break;
-                case UNSECURE:
-                    if (System.getSecurityManager() != null) {
-                        throw new IllegalStateException("SecurityManager already set");
-                    }
-                    break;
-                default:
-                    new InternalError("No such testcase: " + test);
-            }
-            doPrivileged(() -> {
-                try {
-                    ByteArrayOutputStream bytes = new ByteArrayOutputStream();
-                    propertyFile.store(bytes, propertyFile.getProperty("test.name"));
-                    ByteArrayInputStream bais = new ByteArrayInputStream(bytes.toByteArray());
-                    LogManager.getLogManager().readConfiguration(bais);
-                } catch (IOException ex) {
-                    throw new RuntimeException(ex);
-                }
-            });
-        }
-        static void doPrivileged(Runnable run) {
-            allowAll.set(true);
-            try {
-                run.run();
-            } finally {
-                allowAll.set(false);
-            }
-        }
-        static <T> T callPrivileged(Callable<T> call) throws Exception {
-            allowAll.set(true);
-            try {
-                return call.call();
-            } finally {
-                allowAll.set(false);
-            }
+    static void setUp(Properties propertyFile) {
+        try {
+            ByteArrayOutputStream bytes = new ByteArrayOutputStream();
+            propertyFile.store(bytes, propertyFile.getProperty("test.name"));
+            ByteArrayInputStream bais = new ByteArrayInputStream(bytes.toByteArray());
+            LogManager.getLogManager().readConfiguration(bais);
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
         }
     }
 
@@ -294,44 +213,32 @@ public class FileHandlerLongLimit {
     }
 
     private static long getLimit(FileHandler handler) throws Exception {
-        return Configure.callPrivileged((Callable<Long>)() -> {
-            return limitField.getLong(handler);
-        });
+        return limitField.getLong(handler);
     }
     private static OutputStream getMeteredOutput(FileHandler handler) throws Exception {
-        return Configure.callPrivileged((Callable<OutputStream>)() -> {
-            final OutputStream metered = OutputStream.class.cast(meterField.get(handler));
-            return metered;
-        });
+        final OutputStream metered = OutputStream.class.cast(meterField.get(handler));
+        return metered;
     }
     private static TestOutputStream setTestOutputStream(OutputStream metered) throws Exception {
-        return Configure.callPrivileged((Callable<TestOutputStream>)() -> {
-            outField.set(metered, new TestOutputStream(OutputStream.class.cast(outField.get(metered))));
-            return TestOutputStream.class.cast(outField.get(metered));
-        });
+        outField.set(metered, new TestOutputStream(OutputStream.class.cast(outField.get(metered))));
+        return TestOutputStream.class.cast(outField.get(metered));
     }
     private static long getWritten(OutputStream metered) throws Exception {
-        return Configure.callPrivileged((Callable<Long>)() -> {
-            return writtenField.getLong(metered);
-        });
+        return writtenField.getLong(metered);
     }
 
     private static long setWritten(OutputStream metered, long newValue) throws Exception {
-        return Configure.callPrivileged((Callable<Long>)() -> {
-            writtenField.setLong(metered, newValue);
-            return writtenField.getLong(metered);
-        });
+        writtenField.setLong(metered, newValue);
+        return writtenField.getLong(metered);
     }
 
     public static FileHandler testFileHandlerLimit(FileHandlerSupplier supplier,
             long limit) throws Exception {
-        Configure.doPrivileged(() -> {
-            try {
-                Files.deleteIfExists(Paths.get(PREFIX));
-            } catch (IOException x) {
-                throw new RuntimeException(x);
-            }
-        });
+        try {
+            Files.deleteIfExists(Paths.get(PREFIX));
+        } catch (IOException x) {
+            throw new RuntimeException(x);
+        }
         final FileHandler fh = supplier.test();
         try {
             // verify we have the expected limit
@@ -439,73 +346,6 @@ public class FileHandlerLongLimit {
                     () -> new FileHandler(PREFIX, Long.MAX_VALUE, 1, true),
                     Long.MAX_VALUE));
         }
+        System.out.println("Success for: " + name);
     }
-
-
-    static final class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    public static class SimplePolicy extends Policy {
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final Permissions allPermissions;
-        final AtomicBoolean allowAll;
-        public SimplePolicy(TestCase test, AtomicBoolean allowAll) {
-            this.allowAll = allowAll;
-            permissions = new Permissions();
-            permissions.add(new LoggingPermission("control", null));
-            permissions.add(new FilePermission(PREFIX+".lck", "read,write,delete"));
-            permissions.add(new FilePermission(PREFIX, "read,write"));
-
-            // these are used for configuring the test itself...
-            allPermissions = new Permissions();
-            allPermissions.add(new java.security.AllPermission());
-
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            if (allowAll.get()) return allPermissions.implies(permission);
-            return permissions.implies(permission) || DEFAULT_POLICY.implies(domain, permission);
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(allowAll.get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(allowAll.get()
-                    ? allPermissions : permissions).toPermissions();
-        }
-    }
-
 }
